Ya tengo la lista en cada card para saber quienes están

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -7,7 +7,7 @@
 {% include "perfil_header.html" %}
 {% include "perfil_body.html" %}
 {% include "perfil_scripts.html" %}
-
+{% include "perfil_listas.html" %}
 {% endblock %}
 
 
